# mistral-hackiterate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
outputs/20260301_235248/: metadata.json
outputs/20260302_004535/: metadata.json
outputs/20260302_040834/: metadata.json
outputs/20260302_064527/: metadata.json
outputs/20260302_070205/: metadata.json
src/sentinel/: app.py
src/sentinel/core/: pipeline.py
src/sentinel/interfaces/: schemas.py
src/sentinel/prompts/: cover_art_prompt.jinja2  judge_script.jinja2  podcast_script.jinja2
src/sentinel/services/: audio.py  llm.py  news.py
src/sentinel/utils/: config.py  logger.py
tests/: test_api.py  test_eleven.py  test_judge.py
